--- a/src/main.css
+++ b/src/main.css
@@ -2,4 +2,18 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  color: #333;
+}
+
+header {
+  width: 100%;
+  height: 150px;
+  background-color: #FaFaFa;
+}
+
+.container {
+  width: 100%;
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 10px;
 }
