--- a/src/main.css
+++ b/src/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  color: #333;
+  color: #555;
 }
 
 header {
@@ -11,9 +11,88 @@ header {
   background-color: #FaFaFa;
 }
 
+a {
+  color: #e81c4f;
+}
+
+h1 {
+  font-weight: 500;
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 7px;
+}
+
+h2 {
+  font-weight: 400;
+  color: #333;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
 .container {
   width: 100%;
   max-width: 980px;
   margin: 0 auto;
   padding: 10px;
+}
+
+.stream {
+  width: 100%;
+  height: 141px;
+  margin: 10px;
+  margin-left: 0px;
+  position: relative;
+  border-left: 2px solid #69c;
+  background: #f5f7f9;
+  border-bottom: 1px solid #d8dee9;
+}
+
+.stream .img-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+  height: 141px;
+  float: left;
+  margin-right: 15px;
+}
+
+.stream .img-container img {
+  height: 141px;
+  width: 250px;
+  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 1s; /* Firefox < 16 */
+  -ms-animation: fadein 1s; /* Internet Explorer */
+  -o-animation: fadein 1s; /* Opera < 12.1 */
+  animation: fadein 1s;
+}
+
+.stream .viewcount {
+  position: absolute;
+  bottom: 2px;
+  right: 2px;
+  opacity: .8;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
