--- a/src/css/Stream.css
+++ b/src/css/Stream.css
@@ -1,50 +1,15 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-  color: #555;
-}
-
-header {
-  width: 100%;
-  height: 150px;
-  background-color: #FaFaFa;
-}
-
-a {
-  color: #e81c4f;
-}
-
-h1 {
-  font-weight: 500;
-  color: #333;
-  font-size: 24px;
-  margin-bottom: 7px;
-}
-
-h2 {
-  font-weight: 400;
-  color: #333;
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
-.container {
-  width: 100%;
-  max-width: 980px;
-  margin: 0 auto;
-  padding: 10px;
-}
-
 .stream {
   width: 100%;
   height: 141px;
   margin: 10px;
   margin-left: 0px;
   position: relative;
-  border-left: 2px solid #69c;
+  border-left: 3px solid #69c;
   background: #f5f7f9;
   border-bottom: 1px solid #d8dee9;
+  transition: box-shadow 0.5s;
+} .stream:hover {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.2);
 }
 
 .stream .img-container {
@@ -54,12 +19,13 @@ h2 {
   width: 250px;
   height: 141px;
   float: left;
-  margin-right: 15px;
 }
 
 .stream .img-container img {
   height: 141px;
   width: 250px;
+  position: relative;
+  top: 2px;
   -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 1s; /* Firefox < 16 */
   -ms-animation: fadein 1s; /* Internet Explorer */
@@ -69,9 +35,17 @@ h2 {
 
 .stream .viewcount {
   position: absolute;
-  bottom: 2px;
-  right: 2px;
-  opacity: .8;
+  bottom: 10px;
+  right: 10px;
+  opacity: .7;
+}
+
+.stream .content {
+  display: inline-block;
+  width: calc(100% - 250px);
+  height: 100%;
+  box-sizing: border-box;
+  padding: 10px;
 }
 
 @keyframes fadein {
