--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,8 @@ header {
 
 a {
   color: #e81c4f;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 h1 {
@@ -56,4 +58,16 @@ h2 {
   bottom: 5px;
   right: 5px;
   opacity: .7;
+}
+
+.top-right {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+  font-size: 24px;
+}
+
+.icon {
+  color: #e81c4f;
+  cursor: pointer;
 }
